src/test/ui/did_you_mean/pub-macro-rules.stderr
error: can't qualify macro_rules invocation with `pub`
  --> $DIR/pub-macro-rules.rs:2:5
   |
LL |     pub macro_rules! foo {
   |     ^^^ help: try exporting the macro: `#[macro_export]`

error: aborting due to previous error

